--- a/src/bookfinder.css
+++ b/src/bookfinder.css
@@ -1,11 +1,17 @@
+body {
+    /* border: 3px solid green; */
+    background-color: cadetblue !important;
+}
+
 .wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100%;
+    min-height: 100vh;
     margin: 0;
     flex-direction: column;
     width: 60vw;
+    /* background-color: red; */
 }
 
 form{
@@ -16,7 +22,7 @@ form{
 }
 
 form input {
-    border-radius: 25px;
+    /* border-radius: 25px; */
     border: none;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     /* padding: 1rem; */
@@ -29,21 +35,65 @@ input:focus {
     outline: none;
 }
 
+input::placeholder {
+    font-style: italic;
+}
+
 form button {
     border: none;
     background-color: transparent;
     /* color: rgb(16, 143, 58); */
-    font-size: 2rem;
+    font-size: 1.8rem;
     padding: 0;
     /* margin-left: 5%; */
 }
 
+.container {
+    margin-top: 3%;
+    background-color: white;
+}
 .card-box {
-    /* height: 80vh; */
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    padding: 3.5%;
+    min-height: 50vh;
+    /* background-color: rgb(112, 102, 102); */
+    border: 1px solid darkslategrey;
+}
+
+.image-display {
+    margin-bottom: 4%;
+}
+
+.image-display img {
+    height: 100%;
+}
+
+.info-display {
+    height: 23%;
 }
 
 .title-display {
-    font-size: 1.1rem;
+    font-size: 1rem;
+}
+
+.author-display {
+    font-size: 0.8rem;
+}
+
+.card-box button {
+    border-radius: 3px;
+    padding: 0.5rem;
+    border: none;
+    background-color: rgb(36, 36, 231);
+    color: white;
+    font-size: 0.75rem;
+}
+
+.card-box button:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 @media only screen and (min-width: 576px) {
@@ -57,7 +107,27 @@ form button {
         min-width: 300px;
     }
 
+    form button {
+        font-size: 2rem;
+    }
+    
+    .image-display img {
+        height: 100%;
+    }
+    
+    .info-display {
+        height: 30%;
+    }
+    
     .title-display {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+    }
+
+    .author-display {
+        font-size: 0.9rem;
+    }
+
+    .card-box button {
+        font-size: 0.8rem;
     }
 }
